# rrlm

./: .env.example  .gitignore  ARTICLE.md  CONTRIBUTING.md  FINDINGS.md  Makefile  README.md  dagger.json  dflash-qwen36.sh  install.sh  pyproject.toml  serve-models.sh  serve-pitune.sh  serve-qwen36.sh
.github/workflows/: ci.yml
dagger/: pyproject.toml
dagger/src/rrlm/: __init__.py  main.py
docs/: CI.md  FINDINGS.md  LOCAL_SERVING.md
examples/: _harness.py  eval_bugfind.py  eval_pi.py  eval_tabular.py
examples/crm/: ASSESSMENT.md  README.md  SPEC.md  build_loop.sh  build_metrics.tsv  drive.sh
examples/crm/prompts/: build.md  continue.md  continue2.md  fix.md  fix_ornith.md
examples/crm/template/: .gitignore  go.sum
experiments/dflash-vs-mtp/: FINDINGS.md  bench_llamacpp.sh  bench_mtp.sh  concurrency_bench.py  run_e2e_cell.sh  run_winner_cells.sh
experiments/dflash-vs-mtp/results/: conc_llamacpp.json  conc_mlxlm.json  conc_ornith.json  e2e_compare.tsv  llamacpp_q6.json  mtp_q6.json  winner_cells.tsv
experiments/dflash-vs-mtp/results/dflash_q8_w8_512.json/: invocation.json  manifest.json  runs.jsonl  summary.json  summary.md
experiments/superpowers/: PROOF.md  PROOF_tables.md  README.md  environment.txt  results.tsv  run_experiment.sh  summarize.py
experiments/superpowers/evidence/20260627-022512_ledger-500_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-022910_ledger-500_pitune-qwen3.6-27b-pi-tune_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-023150_ledger-2000_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-023152_ledger-2000_pitune-qwen3.6-27b-pi-tune_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-023522_ledger-5000_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-023524_ledger-5000_pitune-qwen3.6-27b-pi-tune_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-023711_ledger-20000_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-023713_ledger-20000_pitune-qwen3.6-27b-pi-tune_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-024034_needle-2000_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-024605_needle-2000_pitune-qwen3.6-27b-pi-tune_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-024934_bugfind-60_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-024959_bugfind-60_pitune-qwen3.6-27b-pi-tune_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-030159_imdb-200_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-032927_imdb-200_pitune-qwen3.6-27b-pi-tune_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-033532_ledger-2000_qwen-official-mlx-community-Qwen3.6-27B-8bit_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-035612_ledger-2000_qwen-official-mlx-community-Qwen3.6-27B-8bit_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-035807_ledger-20000_qwen-official-mlx-community-Qwen3.6-27B-8bit_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-042907_ledger-20000_qwen-official-mlx-community-Qwen3.6-27B-8bit_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json
experiments/superpowers/evidence/20260627-042909_ledger-2000_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-042913_ledger-2000_pitune-qwen3.6-27b-pi-tune_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-043109_ledger-5000_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-043111_ledger-5000_pitune-qwen3.6-27b-pi-tune_rlm-roff-sub-supergemma4-26b-uncensored-mlx-4bit-v2/: result.json  run.json  trace.json
experiments/superpowers/evidence/20260627-043235_ledger-100_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
experiments/superpowers/evidence/20260627-043426_ledger-300_pitune-qwen3.6-27b-pi-tune_baseline-roff/: result.json  run.json
pi/: README.md
pi/extensions/rlm-backend/: index.ts
pi/skills/rlm-first/: SKILL.md
scripts/local-serving/: dflash-qwen36.sh  purge-dflash-cache.sh  serve-models.sh  serve-ornith.sh  serve-qwen36.sh
src/rrlm/: __init__.py  config.py  doctor.py  gepa.py  harness.py  metrics.py  openrouter.py  pi_config.py  playbooks.py  runner.py  solve.py  tasks.py  traces.py  webtools.py
src/rrlm/bench/: __init__.py  corpora.py  report.py  runner.py  tasks.py
tests/: conftest.py  stub_server.py  test_bench.py  test_config.py  test_doctor.py  test_e2e_cli.py  test_gepa.py  test_guardrails.py  test_harness.py  test_integration_solve.py  test_metrics.py  test_pi_config.py  test_real.py  test_solve_unit.py  test_tasks.py  test_trace_export.py  test_traces_cli.py  test_webtools.py
(+83 files in other folders)
