[project]
name = "rrlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RamXX", email = "ramxx@ramirosalas.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.2.1",
    "httpx>=0.28.1",
    "predict-rlm[gepa]>=0.6.1",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]
