[project]
name = "rrlm"
version = "0.1.0"
description = "An RLM-first backend for the Pi coding agent: delegate data-heavy subtasks to a recursive-language-model harness instead of stuffing data into context."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ramiro Salas", email = "ramxx@ramirosalas.com" }
]
requires-python = ">=3.11"
keywords = ["rlm", "recursive-language-models", "pi", "coding-agent", "dspy", "predict-rlm", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dspy>=3.2.1",
    "httpx>=0.28.1",
    "predict-rlm>=0.7.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
# Live web retrieval for the agent (rrlm.webtools): keyless DuckDuckGo search +
# main-text extraction. Enable with `rrlm-solve --web` / RRLM_WEB=1. httpx is
# already a base dependency.
web = [
    "ddgs>=6.0",
    "trafilatura>=1.12",
]
# RLM-GEPA doctrine optimization (rrlm.gepa / the rrlm-gepa CLI).
gepa = [
    "predict-rlm[gepa]>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/RamXX/rrlm"
Repository = "https://github.com/RamXX/rrlm"
Issues = "https://github.com/RamXX/rrlm/issues"

[project.scripts]
rrlm-solve = "rrlm.solve:main"
rrlm-bench = "rrlm.bench.runner:main"
rrlm-report = "rrlm.bench.report:main"
rrlm-traces = "rrlm.traces:main"
rrlm-doctor = "rrlm.doctor:main"
rrlm-gepa = "rrlm.gepa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.9.0",
    # the [gepa] extra, so the offline rrlm.gepa tests run in dev and CI
    "predict-rlm[gepa]>=0.7.0",
]

[tool.pytest.ini_options]
markers = [
    "real: calls a live model or external tooling (Pi, real provider). Needs credentials / a served model / a GPU; excluded from the default and coverage runs.",
    "integration: offline end-to-end run of the harness against the local OpenAI-compatible stub server (real subprocess, real sockets, no mocks, no network). Runs in the default and coverage runs.",
    "e2e: offline end-to-end exercise of the rrlm-solve CLI and library entry point against the local stub server (no mocks, no network). Runs in the default and coverage runs.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

# Contributors hacking on predict-rlm alongside rrlm can point the dependency at a
# local checkout WITHOUT editing this file, e.g. in a git-ignored uv.toml or via:
#   uv pip install -e ../predict-rlm
# The published package always resolves predict-rlm from PyPI.
